fix: margin spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -169,9 +169,10 @@ a {
 
 .svg {
     display: flex;
+    display: block;
 }
 
-.svg-180 {
+.rotate {
     transform: rotate(180deg);
 }
 
@@ -271,7 +272,7 @@ a {
     width: 100%;
     height: 100%;
     padding: 5rem;
-    margin: 0 0 5rem 0rem;
+    margin: 0;
     background-color: var(--background-colour);
 
     div {
